k8s-manifests/60-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ipa-project-ingress
  namespace: ipa-project
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - ipa.local
  rules:
  - host: ipa.local
    http:
      paths:
      - path: /api/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: ipa-backend-svc
            port:
              number: 80

      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: ipa-frontend-svc
            port:
              number: 80
